Initial, JDK 11 downgrade